Charge modes: rename pv to smart, replace minpv with always charge
