# server/mqtt.go
@@ -248,6 +248,7 @@ func (m *MQTT) listenSiteSetters(topic string, site site.API) error {
 func (m *MQTT) listenLoadpointSetters(topic string, site site.API, lp loadpoint.API) error {
 	for _, s := range []setter{
 		{"mode", setterFunc(api.ChargeModeString, pass(lp.SetMode))},
+		{"alwaysCharge", setterFunc(api.AlwaysChargeString, lp.SetAlwaysCharge)},
 		{"phasesConfigured", intSetter(lp.SetPhasesConfigured)},
 		{"limitSoc", intSetter(pass(lp.SetLimitSoc))},
 		{"minSoc", intSetter(pass(lp.SetMinSoc))},
